@@ -52,6 +52,8 @@
     - unsafe IncreaseGoogleAnalyticsCounterAsynch routine
       removed from wgx library
     - WgxCreateProcess and WgxCreateThread routines added to wgx library
+    - winx_flush_dbg_log routine added to zenwinx library
+    - udefrag_flush_dbg_log routine added to udefrag library
 
 
   Version 5.0.4  2012-04-07
